# python-best-practice-de

./: README.md
Folien/Html/Code-Along/Extras/: 01 Nebenläufigkeit.html  02 Multiprocessing (Part 1).html  03 Multiprocessing (Part 2).html  04 Multiprocessing (Part 3).html  05 Multiprocessing (Part 4).html
Folien/Html/Code-Along/Intro/: 01 Herzlich Willkommen.html  02 Kursdateien.html  03 Arbeiten mit Jupyter Notebooks.html  04 Tipps für das 4x4 Programm.html  07 Die Linux Shell.html
Folien/Html/Code-Along/Objektorientierung (Bonus-Material)/: 01 Umwandlung in Strings.html  02 Typen vs Instanzen.html  03 Klassen.html  04 Methoden.html  05 Das Python Datenmodell.html  06 Properties.html  07 Vererbung Motivation.html  08 Vererbung.html  09 Default-Argumente.html  10 Dataclasses.html
Folien/Html/Code-Along/Woche 1/: 03 Was sind gute Tests.html  05 Pytest.html  06 Pytest und VS Code.html  07 Pytest und PyCharm.html  08 Docstrings.html  09 Doctests.html  10 Isolation von Unit-Tests.html  11 Test Doubles.html  12 Was ist Clean Code.html  13 Clean Code Namen (Teil 1).html  14 Clean Code Funktionen (Teil 1).html
Folien/Html/Code-Along/Woche 2/: 01 Schreiben von guten Unit-Tests.html  02 Clean Code Namen (Teil 2).html  03 Clean Code Funktionen (Teil 2).html  06 Adventure Version 1.html  07 GRASP Creator.html  08 GRASP Informations-Experte.html  09 Bibliothekssystem Einführung.html  10 GRASP Niedrige Kopplung.html
Folien/Html/Code-Along/Woche 3/: 01 Test-Driven-Development.html  02 Kata Primfaktorzerlegung.html  03 Clean Code Namen (Teil 3).html  04 Clean Code Kommentare und Dokumentation.html  05 Typannotationen.html  06 SOLID Single Responsibility Prinzip.html  07 Concrete Factory.html  08 SRP Lösungsansätze.html  09 Adventure Recap.html  10 SRP Workshop.html  11 GRASP Hohe Kohäsion.html  12 Adventure Spielfigur (V1).html  13 Adventure Spielfigur (V2).html  14 SOLID Open-Closed Prinzip.html
examples/Primes/: README.md  setup.cfg
examples/Primes/src/primes/: __main__.py  prime_factors.py
examples/Primes/tests/: main_test.py  prime_factors_test.py
examples/PrimesStarterKit/: README.md  pytest.ini  setup.cfg
examples/PrimesStarterKit/src/primes_sk/: __main__.py  prime_factors.py
examples/PrimesStarterKit/tests/: prime_factors_test.py
examples/Recipes/: recipes.py  test_recipes.py
examples/RecipesStarterKit/: recipes.py  test_recipes.py
examples/ShoppingList/: README.md  setup.cfg  tox.ini
examples/ShoppingList/src/shopping_list/: __init__.py  shopping_list.py
examples/ShoppingList/tests/: item_test.py  shopping_list_test.py
examples/ShoppingListPytest/: .bumpversion.cfg  README.md  setup.cfg
examples/ShoppingListPytest/tests/: item_test.py  shopping_list_test.py
examples/ShoppingListPytestSK/: README.md
examples/ShoppingListPytestSK/tests/: item_test.py
examples/ShoppingListStarterKit/: README.md  setup.cfg
examples/ShoppingListStarterKit/tests/: shopping_list_test.py
examples/SimplePytest/: README.md  pytest.ini  setup.cfg
examples/SimplePytest/src/: Simple Doctest.ipynb  Simple Pytest.ipynb
examples/SimplePytest/src/simple_pytest/: __main__.py  arithmetic.py  my_data_type.py
examples/SimplePytest/tests/: arithmetic_test.py  main_test.py  my_data_type_test.py
examples/SimplePytestStarterKit/: setup.cfg
examples/SimplePytestStarterKit/src/: Simple Doctest.ipynb  Simple Pytest.ipynb
examples/SimplePytestStarterKit/src/simple_pytest_sk/: arithmetic.py  my_data_type.py
examples/SimplePytestStarterKit/tests/: arithmetic_test.py
(+343 files in other folders)
