[metadata]
name = primes-sk
version = 0.0.1
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = A simple prime number generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/primes/
project_urls =
    Bug Tracker = https://github.com/hoelzl/primes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8


[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    primes-sk = primes_sk.__main__:main