[metadata]
name = shopping_list
version = 0.0.2
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = A simple shopping list.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/python-programmierer
project_urls =
    Bug Tracker = https://github.com/hoelzl/python-programmierer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where=src
