[metadata]
name = simple-pytest-sk
version = 0.0.1
author = Dr. Matthias Hölzl
author_email = tc@xantira.com
description = Simple examples for pytest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hoelzl/simple-pytest-sk
project_urls =
    Bug Tracker = https://github.com/hoelzl/simple-pytest-sk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8


[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    simple-pytest = simple_pytest_sk.__main__:main